<resources>
    <string name="app_name">My Compose Testing</string>
    <string name="enter_length">Enter Length</string>
    <string name="enter_width">Enter Width</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result: %s</string>
</resources>